Fix title on mobile

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -19,6 +19,7 @@
             text-shadow: 1px 1px #ffffff60;
             line-height: 50px;
             letter-spacing: 10px;
+            position: absolute;
         }
     }
 
